--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tranpaulyn/test_db#readme",
   "dependencies": {
+    "knex": "^0.16.3",
     "pg": "^7.8.1"
   }
 }
